fix(styles): fix checkbox label wrap at contact styles

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -6,7 +6,7 @@
 }
 .contact {
   max-width: 720px;
-  padding-top: 4.6875rem;
+  padding-top: 4rem;
   margin: auto;
   .heading,
   .subheading {
@@ -77,7 +77,7 @@
       display: inline-block;
       word-wrap:normal;
       white-space: normal;
-      padding: 0 0.3rem;
+      padding: 0 .75rem;
       font-weight: 400px;
       font-size: 1rem;
       line-height: 24px;
@@ -95,6 +95,14 @@
   }
 }
 @media (max-width: 770px) {
+    :root{
+     font-size: 16px;
+    }
+    
+    .checkbox_align{
+        display: flex !important;
+        align-items: flex-start !important;
+    }
   .name {
     flex-direction: column;
     gap: 24px;
